feat: CreatePullRequestDialog - load branches async and use EDT helper